--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,7 +14,7 @@ body {
 }
 
 *{
-    /* border: 1px solid red; */
+    /* outline: 1px solid red; */
 }
 
 code {
